# apim-rag-app

./: .gitignore  README.md
00-infra/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
01-models/: Dockerfile  build.sh  main.tf  outputs.tf  providers.tf  variables.tf
02-apim/: apim.tf  locals.tf  outputs.tf  providers.tf  subscription.tf  variables.tf
02-apim/policies/: circuit-breaker.xml  content-safety.xml  embeddings-api.xml.tftpl  gpt-oss-api.xml.tftpl  llm-token-limit.xml  priority-load-balancer.xml  semantic-caching.xml
03-app/: .env.example  pyproject.toml
03-app/scripts/: seed.py
03-app/src/rag_app/: __init__.py  agent.py  api.py  config.py  retrieval.py
04-load-tests/: baseline-test.js  config.js  prompts.js
04-load-tests/results/: .gitkeep
05-ai-gateway-dev-portal/: AGENTS.md  DEPLOY.md  README.md  deploy.ps1  package-lock.json  package.json
05-ai-gateway-dev-portal/.github/prompts/: costs.prompt.md  evals.prompt.md  registry.prompt.md
05-ai-gateway-dev-portal/docs/prompts/: costs.md  evals.md  registry.md
05-ai-gateway-dev-portal/src/: App.tsx  index.css  main.tsx  types.ts
05-ai-gateway-dev-portal/src/components/: Header.tsx  Sidebar.tsx  TraceModal.tsx  UserMenu.tsx
05-ai-gateway-dev-portal/src/config/: msal.ts
05-ai-gateway-dev-portal/src/context/: AzureContext.tsx  ThemeContext.tsx
05-ai-gateway-dev-portal/src/pages/: A2A.tsx  A2APlayground.tsx  InferenceApis.tsx  McpPlayground.tsx  McpServers.tsx  ModelProviders.tsx  Playground.tsx  Products.tsx  Subscriptions.tsx
(+2 files in other folders)
