[project]
name = "rag-app"
version = "0.1.0"
description = "RAG agent (Microsoft Agent Framework) fronting gpt-oss via APIM + Azure AI Search"
requires-python = ">=3.13"
dependencies = [
    # Microsoft Agent Framework — pinned to the version verified against this code.
    # (Pulls agent-framework-azure-ai-search, which brings azure-search-documents.)
    "agent-framework==1.11.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app"]

[tool.ruff]
line-length = 100
target-version = "py313"
